# mo2-path-wizard

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.0.5.md  RELEASE_NOTES_v1.0.6.md  build_windows.ps1  pyproject.toml
.github/workflows/: build-windows.yml
src/mo2_path_wizard/: __main__.py  cli.py  discovery.py  executables.py  gui.py  patcher.py  presets.py
tests/: test_cli.py  test_discovery.py  test_gui.py  test_patcher.py
